<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Streamflix</string>
    <string name="profile_who_is_watching">Who\'s watching?</string>
    <string name="profile_no_profiles">No profiles yet</string>
    <string name="profile_default_name">Default</string>
    <string name="profile_current">Current profile</string>
    <string name="profile_card_content_description">Profile %1$s</string>
    <string name="profile_add_btn">Add Profile</string>
    <string name="profile_manage_btn">Manage</string>
    <string name="profile_edit_btn">Edit Profile</string>
    <string name="settings_profile_edit_summary">Rename the current profile</string>
    <string name="profile_manage_title">Manage Profiles</string>
    <string name="profile_create_title">New Profile</string>
    <string name="profile_rename_title">Rename Profile</string>
    <string name="profile_action_color">Change color</string>
    <string name="profile_color_title">Profile color</string>
    <string name="profile_color_changed">Profile color changed</string>
    <string name="profile_delete_title">Delete Profile</string>
    <string name="profile_delete_message">Are you sure you want to delete \"%s\"?</string>
    <string name="profile_name_hint">Profile name</string>
    <string name="profile_action_switch">Switch to this profile</string>
    <string name="profile_switch_pin_title">Enter profile PIN</string>
    <string name="profile_switch_pin_message">Enter the current profile’s parental PIN to switch profiles.</string>
    <string name="profile_action_rename">Rename</string>
    <string name="profile_action_delete">Delete</string>
    <string name="profile_created">Profile created</string>
    <string name="profile_renamed">Profile renamed</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="profile_delete_error">Cannot delete profile</string>
    <string name="profile_delete_default_error">Cannot delete the default profile</string>
    <string name="profile_import_warning_title">Cross-Profile Import</string>
    <string name="profile_import_warning_message">This data was exported from profile \"%1$s\". It will be imported into the current profile \"%2$s\". The current profile\'s data will be overwritten. Continue?</string>
    <string name="settings_screen_profiles_title">Profiles</string>
    <string name="settings_screen_profiles_summary">Manage user profiles and their data</string>
    <string name="settings_profile_manage_summary">View, rename, or delete profiles</string>
    <string name="settings_profile_add_summary">Create a new profile</string>
    <string name="loading_error_title">An error occurred</string>
    <string name="loading_error_retry">Retry</string>
    <string name="loading_error_clear_cache">Clear Cache</string>
    <string name="loading_error_details">Error Details</string>
    <string name="update_title">New Update Available</string>
    <string name="update_message">A new version of the app is available!</string>
    <string name="update_current_version_label">Current version</string>
    <string name="update_new_version_label">New version</string>
    <string name="update_release_notes">Release notes</string>
    <string name="update_later">Maybe Later</string>
    <string name="update">Update</string>
    <string name="settings_update_check">Automatic update check</string>
    <string name="settings_update_check_summary">Check for new versions of the app automatically</string>
    <string name="app_layout">App layout</string>
    <string name="app_layout_auto">Auto</string>
    <string name="app_layout_mobile">Mobile layout</string>
    <string name="app_layout_tv">TV layout</string>
    <string name="app_layout_apply">Apply</string>
    <string name="providers_all_languages">All languages</string>
    <string name="providers_favorites">Favorites</string>
    <string name="providers_choose_title">Choose a provider</string>
    <string name="main_menu_change_provider">Change provider</string>
    <string name="main_menu_change_profile">Change profile</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_movies">Movies</string>
    <string name="main_menu_tv_shows">TV Shows</string>
    <string name="main_menu_all_channels">All Channels</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_favorites">Favorites</string>
    <string name="main_menu_theme_change">Change Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_nero_amoled_oled">Nero Amoled/Oled</string>
    <string name="theme_sunset_cinema">Sunset Cinema</string>
    <string name="theme_steel_blue">Steel Blue</string>
    <string name="theme_forest_night">Forest Night</string>
    <string name="theme_crimson_noir">Crimson Noir</string>
    <string name="theme_midnight_violet">Midnight Violet</string>
    <string name="theme_nord_frost">Nord Frost</string>
    <string name="theme_emerald_luxe">Emerald Luxe</string>
    <string name="theme_retro_neon">Retro Neon</string>
    <string name="search_input_hint">Search movies, TV shows</string>
    <string name="search_input_hint_iptv">Search channels</string>
    <string name="global_search">Global search</string>
    <string name="search_empty_query">Please enter a search query</string>
    <string name="searching">Searching...</string>
    <string name="search_error">Error</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="switching_to_provider">Switching to %s</string>
    <string name="home_swiper_watch_now">Watch Now</string>
    <string name="home_continue_watching">Continue Watching</string>
    <string name="home_recently_watched">Recently Watched</string>
    <string name="home_favorite_movies">Favorite movies</string>
    <string name="home_favorite_tv_shows">Favorite TV shows</string>
    <string name="favorites_empty">You have no favorites yet</string>
    <string name="favorites_reorder_categories">Sort favorites</string>
    <string name="favorites_sort_title">Sort favorites</string>
    <string name="favorites_sort_manual">Manual order</string>
    <string name="favorites_sort_recent">Recently added</string>
    <string name="favorites_sort_title_ascending">Title A–Z</string>
    <string name="favorites_sort_title_descending">Title Z–A</string>
    <string name="favorites_reorder_item">Reorder favorite</string>
    <string name="favorites_move_left">Move left</string>
    <string name="favorites_move_right">Move right</string>
    <string name="favorites_show_options">Show normal options</string>
    <string name="favorites_rearrange_on">Enter rearrange mode</string>
    <string name="favorites_rearrange_off">Finish rearranging</string>
    <string name="favorites_moving_selected">Moving selected — OK to stop</string>
    <string name="option_episode_open_tv_show">Go to TV show</string>
    <string name="option_show_favorite">Add to favorites</string>
    <string name="option_show_unfavorite">Remove from favorites</string>
    <string name="option_show_watched">Mark as watched</string>
    <string name="option_show_mark_all_previous_watched">Mark as watched until here</string>
    <string name="option_show_mark_all_previous_unwatched">Mark as unwatched until here</string>
    <string name="option_show_unwatched">Mark as unwatched</string>
    <string name="option_clear_program">Remove from Continue Watching</string>
    <string name="option_cancel">Cancel</string>
    <string name="episode_item_info">S%d E%d • %s</string>
    <string name="episode_item_info_episode_only">E%d • %s</string>
    <string name="tv_show_item_episode_number">E%d</string>
    <string name="tv_show_item_season_number_episode_number">S%d E%d</string>
    <string name="tv_show_item_type">TV</string>
    <string name="tv_show_runtime_hours_minutes">%d h %d min</string>
    <string name="tv_show_runtime_minutes">%d min</string>
    <string name="tv_show_watch_season_episode">Watch S%d E%d</string>
    <string name="tv_show_watch_episode">Watch E%d</string>
    <string name="tv_show_trailer">Trailer</string>
    <string name="tv_show_seasons">Seasons</string>
    <string name="tv_show_cast">Cast</string>
    <string name="tv_show_directors">Director</string>
    <string name="tv_show_you_may_also_like">You may also like</string>
    <string name="movie_item_type">Movie</string>
    <string name="movie_runtime_hours_minutes">%d h %d min</string>
    <string name="movie_runtime_minutes">%d min</string>
    <string name="movie_watch_now">Watch Now</string>
    <string name="movie_trailer">Trailer</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_directors">Director</string>
    <string name="movie_you_may_also_like">You may also like</string>
    <string name="season_number">Season %d</string>
    <string name="episode_number">Episode %d</string>
    <string name="people_birthday">Birthday</string>
    <string name="people_deathday">Day of death</string>
    <string name="people_birthplace">Place of birth</string>
    <string name="people_biography">Biography</string>
    <string name="people_read_more">Read More &gt;</string>
    <string name="genre_header_name">%s Movies and TV Shows</string>
    <string name="player_subtitle_tv_show">S%d E%d • %s</string>
    <string name="player_subtitle_tv_show_episode_only">E%d • %s</string>
    <string name="player_picture_in_picture_not_supported">PiP is not supported on your device</string>
    <string name="player_external_player_title">Play using</string>
    <string name="player_external_player_error_video">Video not load yet</string>
    <string name="player_not_available_it_message">Not available on Italian servers, search for it on TMDB in other languages</string>
    <string name="player_not_available_lang_message">Not available in %s, search for it on TMDB in other languages</string>
    <string name="player_retry_later_message">Video currently unavailable on this provider. Please try again later</string>
    <string name="player_next_episode_up_next">Up next</string>
    <string name="player_next_episode_action">Play now</string>
    <string name="player_next_episode_dismiss">Dismiss</string>
    <string name="player_next_episode_ready">Next episode ready</string>
    <string name="player_next_episode_autoplay_in">Playing next in %ds</string>
    <string name="player_aspect_ratio_fit">Fit to screen</string>
    <string name="player_aspect_ratio_fill">Stretch</string>
    <string name="player_aspect_ratio_zoom">Zoom</string>
    <string name="player_aspect_ratio_zoom_4_3">Zoom for 4:3</string>
    <string name="player_aspect_ratio_stretch_vertical">Stretch vertically</string>
    <string name="player_aspect_ratio_super_zoom">Super Zoom</string>
    <string name="player_settings_title">Settings</string>
    <string name="player_settings_quality_title">Quality for current video</string>
    <string name="player_settings_quality_label">Quality</string>
    <string name="player_settings_quality_sub_label_auto">Auto (%dp)</string>
    <string name="player_settings_quality_auto">Auto</string>
    <string name="player_settings_quality_auto_selected">Auto • %dp</string>
    <string name="player_settings_quality">%dp</string>
    <string name="player_settings_audio_title">Audio</string>
    <string name="player_settings_audio_label">Audio</string>
    <string name="player_settings_subtitles_title">Subtitles/closed captions</string>
    <string name="player_settings_subtitles_label">Captions</string>
    <string name="player_settings_subtitles_off">Off</string>
    <string name="player_settings_subtitle_offset_title">Subtitle timing</string>
    <string name="player_settings_subtitle_offset_label">Timing offset</string>
    <string name="player_settings_subtitle_offset_seconds">%+.1f s</string>
</resources>